moodle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
      - name: moodle
        image: bitnami/moodle:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: moodle-data
          mountPath: /bitnami/moodle
      volumes:
      - name: moodle-data
        persistentVolumeClaim:
          claimName: efs-pvc
